2011-02-25  Per Bothner  <per@bothner.com>

	* kawa.texi (Character sets): New section.

2011-02-24  Per Bothner  <per@bothner.com>

	* kawa.texi: Various tweaks.
	(Uniform vectors): Use type names without angle brackets.

	* kawa.texi (Bodies): New section.
	(Multiple values): Some improvements.
	(Format): Add index references.

2011-02-23  Per Bothner  <per@bothner.com>

	* kawa.texi: Some minor syntax-definition fixes.

2011-02-22  Per Bothner  <per@bothner.com>

	* kawa.texi: Change some macros so the result looks less confusing
	in info output.

2011-01-24  Per Bothner  <per@bothner.com>

	* kawa.texi: Various minor fixes and improvements suggested by
	Savannah bug #32224: "Doc Typos/Clarifications".

2011-01-13  Per Bothner  <per@bothner.com>

	* kawa.texi: Fix various errors.
	(Annotations): Add link to blog article about JAXP example.

2011-01-08  Per Bothner  <per@bothner.com>

	* kawa.texi (Primitive expression syntax): New node.
	Various updates to improve syntax definitions and cross-references.

	* kawa.texi (Annotations): New node.

2011-01-04  Per Bothner  <per@bothner.com>

	* kawa.texi (stxdef): Add @anchor.
	(stxref): New macro.
	(...): Use stxref macro for syntax cross-references.

	* kawa.texi (Top): Tweak my personal URL.

2010-12-28  Per Bothner  <per@bothner.com>

	* kawa.texi (Ports): New variable *print-xml-indent*.
	(Paths): Fix typos.

	* kawa.texi (Module classes): Update documentation of require.
	Add documentation for import.

2010-11-10  Per Bothner  <per@bothner.com>

	* kawa.texi (Compiling using Ant): New subsection.

2010-11-06  Per Bothner  <per@bothner.com>

	* kawa.texi (Enumerations): New section.
	* kawa.texi: Also some minor tweaks.

2010-11-04  Per Bothner  <per@bothner.com>

	* kawa.texi (Compilation options): Document --warn-unknown-member.

2010-11-03  Per Bothner  <per@bothner.com>

	* kawa.texi (Anonymous classes): Talk about SAM-conversion.
	(Allocating objects): Lots of stuff about recent improvements.
