@@ -1,3 +1,8 @@
+2011-04-10  Per Bothner  <per@bothner.com>
+
+	* standard/IfFeature.java (hasFeature): Add support for
+	class-exists:CLASS_NAME as a feature "name".
+
 2011-04-03  Per Bothner  <per@bothner.com>
 
 	* standard/SchemeCompilation.java (isApplyFunction): New method.
