@@ -1,3 +1,7 @@
+2011-04-10  Per Bothner  <per@bothner.com>
+
+	* mac-test.scm: Add tests for cond-expand feature class-exists:NAME.
+
 2011-03-07  Helmut Eller  <eller.helmut@gmail.com>
 
 	* misc-test.scm: New test for Savannah bug #32678
