@@ -1,3 +1,8 @@
+2011-04-10  Per Bothner  <per@bothner.com>
+
+	* kawa.texi (Syntax and conditional compilation): Document the
+	new 'class-exists:ClassName' feature test.
+
 2011-02-25  Per Bothner  <per@bothner.com>
 
 	* kawa.texi (Character sets): New section.
